traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:8: error: not found: value diago
  if(y==0 && diago<getMondeLargeur()){setPos(diag+1,0);return diag+1}
             ^TraversalDiagonal:8: error: method avance has return statement; needs result type
  if(y==0 && diago<getMondeLargeur()){setPos(diag+1,0);return diag+1}
                                                       ^TraversalDiagonal:9: error: method avance has return statement; needs result type
  if(diag>=getMondeLargeur() && x+1==getMondeLargeur()){setPos(y,getMondeHauteur());return diag+1}
                                                                                    ^TraversalDiagonal:11: error: method avance has return statement; needs result type
  return diag}
  ^